--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -52,6 +52,7 @@
     font-size: 24px;
   }
 }
+
 /* End Header */
 
 /* Section One */
@@ -70,7 +71,7 @@
   text-align: center;
   max-width: 600px;
   color: #fff;
-  margin: 0 auto; 
+  margin: 0 auto;
 }
 
 .section-one .inner-title {
@@ -91,6 +92,7 @@
     font-size: 13px;
   }
 }
+
 /* End Section One */
 
 /* Section Two */
@@ -144,6 +146,7 @@
     margin-top: 0;
   }
 }
+
 /* End Section Two */
 
 /* Section Three */
@@ -178,6 +181,7 @@
     margin-bottom: 30px;
   }
 }
+
 /* End Section Three */
 
 /* Section Four */
@@ -231,6 +235,7 @@
     margin: 10px 0;
   }
 }
+
 /* End Section Four */
 
 /* Blog Entries */
@@ -277,5 +282,42 @@
     margin: 0 auto;
   }
 }
+
 /* End Blog Entries */
-/* End */
+
+/* Talk to us */
+.talk-to-us {
+  background: #f2f2fe;
+  padding: 80px 0;
+}
+
+.talk-to-us .inner-content .inner-title {
+  font-size: 20px;
+}
+
+.talk-to-us .inner-form input,
+.talk-to-us .inner-form textarea {
+  border-radius: 25px;
+  width: 100%;
+  margin-bottom: 10px;
+  padding: 20px;
+  border: 1px solid #ddd;
+  background: #fff;
+}
+
+.talk-to-us .inner-form input:focus,
+.talk-to-us .inner-form textarea:focus {
+  border-color: #80bdff;
+  outline: 0;
+  box-shadow: 0 0 0 .2rem rgba(0, 123, 255, .25);
+}
+
+.talk-to-us .inner-form input {
+  height: 50px;
+}
+
+.talk-to-us .inner-form textarea {
+  height: 150px;
+}
+
+/* End Talk to us */
